# novel-workspace-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md
docs/: getting-started.md  regression-cases.example.json  repository-map.md  workspace-lifecycle.md
docs/releases/: v0.3.0.md
fixtures/: README.md
fixtures/demo-opening-missing/: Aren-最终人物卡.md  Aren-核心体系总览.md  Aren-词条总索引.md  README.md  demo-opening-missing-主线支线与冲突地图.md  demo-opening-missing-主角锚点与骨架.md  demo-opening-missing-全书精华总结.md  demo-opening-missing-大纲总览.md  demo-opening-missing-整书粗阶段划分.md  demo-opening-missing-时间与地点转折.md  demo-opening-missing-核心冲突点与爆发点.md  demo-opening-missing-核心配角与主角关系.md  demo-opening-missing-结构问题与修改建议.md  demo-opening-missing-阶段与篇章拆分.md  demo-opening-missing-项目启动清单.md  工作状态-2026-05-01.md  (+1 more)
novel-chapter-distillation-skill/: SKILL.md
novel-character-cards/: README.md  pyproject.toml
novel-character-cards/prompts/: extract_characters.md
novel-character-cards/src/novel_character_cards/: ai_extractor.py  chunker.py  cli.py  extractor.py  focus_tracker.py  io_utils.py  merger.py  renderer.py
novel-character-cards/tests/: test_pipeline.py
novel-highlight-scenes-analysis-skill/: SKILL.md
novel-opening-analysis-skill/: SKILL.md
novel-outline-analysis-skill/: SKILL.md
novel-protagonist-encyclopedia-skill/: SKILL.md
novel-workspace-orchestrator-skill/: SKILL.md
text2markdown/: README.md  pyproject.toml
text2markdown/src/text2markdown/: __init__.py  cli.py  converter.py
text2markdown/tests/: test_converter.py
(+46 files in other folders)
