[project]
name = "text2markdown"
version = "0.1.0"
description = "Convert plain text files into Markdown with basic Chinese text cleanup."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
text2markdown = "text2markdown.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
